--- a/SSD28-A01-GitToNodeYou-Starter/public/yuko/index.html
+++ b/SSD28-A01-GitToNodeYou-Starter/public/yuko/index.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Josh Solomon</title>
+    <title>Yuko Ishida</title>
     <link rel="stylesheet" href="yuko/styles/style.css" />
     <script></script>
   </head>
   <body>
-    <header><h1>Git to Node: Josh Solomon</h1></header>
+    <header><h1>Git to Node: Yuko Ishida</h1></header>
     <main>
-      <img
-        src="josh/images/ProfessorJS.png"
-        alt="Headshot of Josh Solomon"
-        width="500px"
-      />
+      
       <h2>Interests</h2>
       <ul>
         <li>Playing Overwatch2 and my arm hurts everyday.</li>
